--- a/recipe.html
+++ b/recipe.html
@@ -63,7 +63,7 @@
     <h3>Here are the steps required to make this fantastic chicken recipe. Keep in mind the preperation and cooking time are 15 minutes each. Ensure you follow proper kitchen safety rules when making this recipe.</h3>
 
     <ol type="1">
-        <li>Gather all fo your ingredients needed. Heat 1 inch oil in a large skillet or a saucepan to around 175°C</li>
+        <li>Gather all of your ingredients needed. Heat 1 inch oil in a large skillet or a saucepan to around 175°C</li>
         <li>Stir together your flour, garlic salt and pepper in a bowl. Dip your cut up chicken into eggs, then press each piece in your flour mixture. 
             Ensure you coat it well, and shake off excess mixture. Place the coated pieces in a plate.</li>
         <li>In batches, fry the chicken in hot oil until it is a nice golden brown colour and no longer pink in the center.</li>
