--- a/recipe.html
+++ b/recipe.html
@@ -37,7 +37,7 @@
     <h2>Hello all visitors! I'm here to reccomend you one of my favourite recipes for my favourite food. This recipe is sure to provide you with the <u><b><big>crispiest, juiciest</big></b></u> chicken nuggets you will ever eat. I hope you enjoy the final product, and let's get right into it!</h2>
 
     <a href="https://www.allrecipes.com/recipe/161469/the-best-ever-chicken-nuggets/">
-    <img src="/Images/Chicken2.jpg" width="400" title="Click here for original website" alt="This is an image of the final chicken output">
+    <img src="Chicken2.jpg" width="400" title="Click here for original website" alt="This is an image of the final chicken output">
     </a>
     
     <h3>The required ingredients for 8 yield of servings include:</h3>
