--- a/recipepage2.html
+++ b/recipepage2.html
@@ -43,7 +43,7 @@
 
     <div>
         <label for="phone">Phone number (For updates regarding new websites):</label>
-        <input type="tel" id="phone" name="phone" placeholder="123-456-789" required>
+        <input type="tel" id="phone" name="phone" placeholder="123-456-7890" pattern="[1-9]{1}[0-9]{2}-[0-9]{3}-[0-9]{4}"required>
     </div>
 
     <br>
